# media-filename-parser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  README.zh-CN.md  interactive_parse.py  media_parser.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
nlp/: README.md  README.zh-CN.md  __init__.py  shared.py
nlp/ner/: __init__.py  compare_low_confidence_with_model.py  evaluate_model_plots.py  evaluate_vs_rule_conf1.py  generate_hard_negative_feed.py  plot_scores.py  predict.py  train_media_filename_ner.py
nlp/qwen/: __init__.py  evaluate_qwen_sft_parser.py  evaluate_vs_rule_conf1.py  interactive_qwen_sft.py
nlp/qwen/qwen_sft_parser/: __init__.py  data_prep.py  inference.py  train.py
src/media_filename_parser/: __init__.py  __main__.py  cli.py  parser.py
src/media_filename_parser/rules/: __init__.py  __main__.py  cli.py  confidence.py  constants.py  extraction.py  parser.py
tests/: test_public_helpers.py  test_rule_parser_smoke.py
tools/: check_web_parser_parity.py  export_parser_constants.py
web/app/: README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json
web/app/src/: input-processing.test.ts  input-processing.ts  main.ts  style.css  torrent.ts
web/app/src/parser/: cli.ts  constants.generated.js  constants.ts  extraction.ts  parser.test.ts  parser.ts
