[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-filename-parser"
version = "0.1.0"
description = "Rule-based media filename parser for reusable Python integration."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
media-filename-parser = "media_filename_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["media_filename_parser*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:vsengine -p no:asyncio"
